# aioairlinksms

./: LICENSE  README.md  pyproject.toml
aioairlinksms/: __init__.py  cli.py  exceptions.py  udp.py
